<resources>
    <string name="app_name">Tracking L.A.O</string>
    <!-- Login page -->
    <string name="login">Login Aplikasi Tracking Obat</string>
    <string name="medrec">Masukkan Nomor Medrec</string>
    <string name="tanggal">Masukkan Tanggal Lahir</string>
    <string name="resi">Masukkan Nomor Resi</string>
    <string name="submit">Cari</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_option">- or with Google -</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="detail">Informasi Obat</string>
    <string name="todo">TODO</string>
    <string name="scan_qr_code_barcode">Scan QR Code / Barcode</string>
    <string name="info_lebih_lanjut">Info lebih lanjut bisa menghubungi Operator Layanan Antar Obat RSU dr. Soedono Provinsi Jawa Timur</string>
    <string name="judul">Ingin tau status pengantaran obat?\nAyo cek status pengantaran obat anda disini</string>
    <string name="info_main">Pilih salah satu pelacakan dibawah ini</string>
    <string name="versiapp">v.1.0 Beta</string>
    <string name="login_button">Login</string>
    <string name="designed_by_itisi">Designed by ITISI\nRSU dr. Soedono Prov. Jawa Timur</string>
    <string name="atau_bisa_menggunakan_scanner">atau bisa menggunakan scanner</string>
    <string name="info_pengantaran">*)Apabila obat belum datang sampai Jam 9 Malam, maka obat akan diantar Besok Pagi</string>
</resources>